# realmd-adcli

./: .gitignore  AUTHORS  HACKING  Makefile.am  Makefile.decl  NEWS  README  autogen.sh  configure.ac
doc/: Makefile.am  adcli-devel.xml  adcli-docs.xml  adcli.xml  gtk-doc.xsl  samba_data_tool_path.xml.in
doc/static/: style.css
tools/: Makefile.am  ad-enroll.c  adcli.c  computer.c  entry.c  info.c  tools.c  tools.h  user.c
